Closed Bug 1355699 Opened 7 years ago Closed 7 years ago

Suppress -Wunused-private-field warning-as-error in js/src/wasm/WasmTypes.h

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox52 --- unaffected
firefox-esr52 --- unaffected
firefox53 --- unaffected
firefox54 --- unaffected
firefox55 --- fixed

People

(Reporter: cpeterson, Assigned: cpeterson)

References

(Blocks 1 open bug)

Details

(Keywords: regression)

Attachments

(1 file)

This -Wunused-private-field warning-as-error (from bug 1334504) breaks the SpiderMonkey ARM Simulator Build on macOS. By changing member variable `padding_` from private to protected, clang will no longer warn because it doesn't know whether some derived class might actually use `padding_`.

js/src/wasm/WasmTypes.h:1522:11: warning: private field 'padding_' is not used [-Wunused-private-field]
Comment on attachment 8857328 [details]
Bug 1355699 - Suppress -Wunused-private-field warning-as-error in js/src/wasm/WasmTypes.h.

Thanks!
Attachment #8857328 - Flags: review?(luke) → review+
Pushed by cpeterson@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/e61166d489fd
Suppress -Wunused-private-field warning-as-error in js/src/wasm/WasmTypes.h. r=luke
https://hg.mozilla.org/mozilla-central/rev/e61166d489fd
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: