Bug 1355699 - Suppress -Wunused-private-field warning-as-error in js/src/wasm/WasmTypes.h. r=luke

This clang warning-as-error (from bug 1334504) breaks the SpiderMonkey ARM Simulator Build on macOS. By changing member variable `padding_` from private to protected, clang will no longer warn because it doesn't know whether some derived class might actually use `padding_`.

js/src/wasm/WasmTypes.h:1522:11: warning: private field 'padding_' is not used [-Wunused-private-field]

MozReview-Commit-ID: LB3yoYQCFj5

--HG--
extra : rebase_source : 948daaa2e3bb0b708670596240effa9a0730f443
extra : amend_source : c500f7d27dcb438ec928fa0b908cef7967dacfc0